Through non-persistent server-side data storage

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.4",
+    "nunjucks": "^3.0.1",
+    "volleyball": "^1.4.1"
   }
 }
